💡 Fixed mobile navbar: stacked layout, bold links, hover color

--- a/index.html
+++ b/index.html
@@ -141,14 +141,15 @@
             </div>
         </div>
 
-        <!-- Mobile Nav -->
-        <div id="mobile-menu" class="md:hidden hidden px-6 pb-4 space-y-4 text-black text-base font-light">
-            <a href="https://mirajoagency.org/pricing-plan" target="_blank">Pricing</a>
-            <a href="https://login.mirajoagency.org/" target="_blank">Client Login</a>
-            <a href="https://mirajo.netlify.app/" class="hover:text-[#1a767f] transition-colors duration-200">MiRAjO
-                Collective</a>
-
+        <div id="mobile-menu"
+            class="md:hidden hidden px-6 pb-6 pt-4 space-y-3 text-black text-base font-bold bg-white border-t border-gray-200">
+            <a href="https://mirajoagency.org/pricing-plan" target="_blank"
+                class="block hover:text-[#1a767f] transition">Pricing</a>
+            <a href="https://login.mirajoagency.org/" target="_blank"
+                class="block hover:text-[#1a767f] transition">Client Login</a>
+            <a href="https://mirajo.netlify.app/" class="block hover:text-[#1a767f] transition">MiRAjO Collective</a>
         </div>
+
     </header>
     <!-- ✅ NAVBAR END -->
 
@@ -836,7 +837,7 @@
 
     <!-- 🔄 Dual Card Row -->
     <section
-        class="w-full flex flex-col md:flex-row flex-wrap items-stretch data-animate-on-scroll gap-6 px-4 md:px-20 py-16 bg-white">
+        class="w-full flex flex-col md:flex-row flex-wrap items-stretch animjustify-center gap-6 px-4 md:px-20 py-16 bg-white">
         <!-- 📦 Card 1: Learns & Improves -->
         <div class="flex-[0_0_50%] max-w-[480px] bg-white border animate-fade-in-right border-gray-200 rounded-xl px-4 py-4 shadow-lg hover:shadow-2xl transition-all duration-500 opacity-0 translate-x-[-50px] fade-in-left"
             data-observe="left-card">
@@ -889,7 +890,7 @@
 
             <!-- 🪄 Glow Ring -->
             <div
-class="absolute -top-16 -right-16 w-[200px] h-[200px] bg-[#1a767f]/30 rounded-full blur-3xl animate-blob z-0">
+                class="absolute -top-16 -right-16 w-[200px] h-[200px] bg-[#1a767f]/30 rounded-full blur-3xl animate-blob z-0">
             </div>
 
             <!-- 🎯 Header -->
