Add updated voiceagent video

--- a/index.html
+++ b/index.html
@@ -1308,6 +1308,142 @@
     </script>
     </section>
 
+    
+    <!-- Full-height layout setup (important!) -->
+    <section class="w-full bg-gradient-to-br from-[#0a0a0a] to-[#1a767f] py-20 px-4 text-white font-[Montserrat]">
+        <div class="text-center mb-12">
+            <h2
+                class="text-3xl md:text-5xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-yellow-400 to-white animate-bounce">
+                What Others Are Saying
+            </h2>
+        </div>
+
+        <div class="grid gap-8 sm:grid-cols-1 md:grid-cols-2 xl:grid-cols-4">
+            <!-- Review Card 1 -->
+            <div data-aos="zoom-in"
+                class="bg-white/10 backdrop-blur-lg rounded-2xl p-6 border border-white/20 shadow-lg hover:scale-[1.02] transition-all duration-500">
+                <div class="flex gap-1 mb-2">
+                    <!-- 5 SVG Stars -->
+                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
+                        <path
+                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
+                    </svg>
+                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
+                        <path
+                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
+                    </svg>
+                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
+                        <path
+                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
+                    </svg>
+                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
+                        <path
+                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
+                    </svg>
+                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
+                        <path
+                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
+                    </svg>
+                </div>
+                <p class="italic text-sm text-gray-200 mb-2">“Just finished my demo with agent Chanel. She is so
+                    smooth and real sounding!”</p>
+                <span class="text-yellow-300 font-semibold">– Rosica</span>
+            </div>
+
+            <!-- Review Card 2 -->
+            <div data-aos="fade-up"
+                class="bg-white/10 backdrop-blur-lg rounded-2xl p-6 border border-white/20 shadow-lg hover:scale-[1.02] transition-all duration-500">
+                <div class="flex gap-1 mb-2">
+                    <!-- 5 Stars -->
+                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
+                        <path
+                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
+                    </svg>
+                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
+                        <path
+                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
+                    </svg>
+                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
+                        <path
+                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
+                    </svg>
+                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
+                        <path
+                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
+                    </svg>
+                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
+                        <path
+                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
+                    </svg>
+                </div>
+                <p class="italic text-sm text-gray-200 mb-2">“MiRAjO.ai literally saved us 12 hours a week.
+                    One-click and done. Our brand finally looks like it has a creative director on payroll.”</p>
+                <span class="text-yellow-300 font-semibold">– Tife A., Creative Lead</span>
+            </div>
+
+            <!-- Review Card 3 -->
+            <div data-aos="fade-up"
+                class="bg-white/10 backdrop-blur-lg rounded-2xl p-6 border border-white/20 shadow-lg hover:scale-[1.02] transition-all duration-500">
+                <div class="flex gap-1 mb-2">
+                    <!-- 5 Stars -->
+                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
+                        <path
+                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
+                    </svg>
+                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
+                        <path
+                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
+                    </svg>
+                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
+                        <path
+                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
+                    </svg>
+                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
+                        <path
+                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
+                    </svg>
+                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
+                        <path
+                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
+                    </svg>
+                </div>
+                <p class="italic text-sm text-gray-200 mb-2">“Used MiRAjO.ai to prep for a pitch. The branding?
+                    Immaculate. They asked who my designer was. I said ‘MiRAjO.ai’ and smiled.”</p>
+                <span class="text-yellow-300 font-semibold">– Liam A., Strategy Consultant</span>
+            </div>
+
+            <!-- Review Card 4 -->
+            <div data-aos="fade-up"
+                class="bg-white/10 backdrop-blur-lg rounded-2xl p-6 border border-white/20 shadow-lg hover:scale-[1.02] transition-all duration-500">
+                <div class="flex gap-1 mb-2">
+                    <!-- 5 Stars -->
+                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
+                        <path
+                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
+                    </svg>
+                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
+                        <path
+                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
+                    </svg>
+                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
+                        <path
+                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
+                    </svg>
+                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
+                        <path
+                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
+                    </svg>
+                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
+                        <path
+                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
+                    </svg>
+                </div>
+                <p class="italic text-sm text-gray-200 mb-2">“MiRAjO.ai helped us scale conversations 4x without
+                    hiring. I didn’t know bots could feel this real.”</p>
+                <span class="text-yellow-300 font-semibold">– Malik J., CX Lead</span>
+            </div>
+        </div>
+    </section>
 
     <section id="faq" class="relative bg-[#f9fafb] py-20 px-6 md:px-10 lg:px-24 font-[Montserrat] text-gray-800">
         <div class="max-w-4xl mx-auto text-center mb-12">
@@ -1970,141 +2106,6 @@
             animation: blinkCursor 1s step-end infinite;
         }
     </style>
-
-    <!-- Full-height layout setup (important!) -->
-    <section class="w-full bg-gradient-to-br from-[#0a0a0a] to-[#1a767f] py-20 px-4 text-white font-[Montserrat]">
-        <div class="text-center mb-12">
-            <h2
-                class="text-3xl md:text-5xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-yellow-400 to-white animate-bounce">
-                What Others Are Saying
-            </h2>
-        </div>
-
-        <div class="grid gap-8 sm:grid-cols-1 md:grid-cols-2 xl:grid-cols-4">
-            <!-- Review Card 1 -->
-            <div data-aos="zoom-in"
-                class="bg-white/10 backdrop-blur-lg rounded-2xl p-6 border border-white/20 shadow-lg hover:scale-[1.02] transition-all duration-500">
-                <div class="flex gap-1 mb-2">
-                    <!-- 5 SVG Stars -->
-                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
-                        <path
-                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
-                    </svg>
-                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
-                        <path
-                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
-                    </svg>
-                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
-                        <path
-                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
-                    </svg>
-                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
-                        <path
-                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
-                    </svg>
-                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
-                        <path
-                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
-                    </svg>
-                </div>
-                <p class="italic text-sm text-gray-200 mb-2">“Just finished my demo with agent Chanel. She is so
-                    smooth and real sounding!”</p>
-                <span class="text-yellow-300 font-semibold">– Rosica</span>
-            </div>
-
-            <!-- Review Card 2 -->
-            <div data-aos="fade-up"
-                class="bg-white/10 backdrop-blur-lg rounded-2xl p-6 border border-white/20 shadow-lg hover:scale-[1.02] transition-all duration-500">
-                <div class="flex gap-1 mb-2">
-                    <!-- 5 Stars -->
-                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
-                        <path
-                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
-                    </svg>
-                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
-                        <path
-                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
-                    </svg>
-                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
-                        <path
-                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
-                    </svg>
-                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
-                        <path
-                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
-                    </svg>
-                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
-                        <path
-                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
-                    </svg>
-                </div>
-                <p class="italic text-sm text-gray-200 mb-2">“MiRAjO.ai literally saved us 12 hours a week.
-                    One-click and done. Our brand finally looks like it has a creative director on payroll.”</p>
-                <span class="text-yellow-300 font-semibold">– Tife A., Creative Lead</span>
-            </div>
-
-            <!-- Review Card 3 -->
-            <div data-aos="fade-up"
-                class="bg-white/10 backdrop-blur-lg rounded-2xl p-6 border border-white/20 shadow-lg hover:scale-[1.02] transition-all duration-500">
-                <div class="flex gap-1 mb-2">
-                    <!-- 5 Stars -->
-                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
-                        <path
-                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
-                    </svg>
-                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
-                        <path
-                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
-                    </svg>
-                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
-                        <path
-                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
-                    </svg>
-                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
-                        <path
-                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
-                    </svg>
-                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
-                        <path
-                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
-                    </svg>
-                </div>
-                <p class="italic text-sm text-gray-200 mb-2">“Used MiRAjO.ai to prep for a pitch. The branding?
-                    Immaculate. They asked who my designer was. I said ‘MiRAjO.ai’ and smiled.”</p>
-                <span class="text-yellow-300 font-semibold">– Liam A., Strategy Consultant</span>
-            </div>
-
-            <!-- Review Card 4 -->
-            <div data-aos="fade-up"
-                class="bg-white/10 backdrop-blur-lg rounded-2xl p-6 border border-white/20 shadow-lg hover:scale-[1.02] transition-all duration-500">
-                <div class="flex gap-1 mb-2">
-                    <!-- 5 Stars -->
-                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
-                        <path
-                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
-                    </svg>
-                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
-                        <path
-                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
-                    </svg>
-                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
-                        <path
-                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
-                    </svg>
-                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
-                        <path
-                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
-                    </svg>
-                    <svg class="w-4 h-4 text-yellow-400" fill="currentColor" viewBox="0 0 20 20">
-                        <path
-                            d="M10 15l-5.878 3.09L5.5 12 1 7.91l6.062-.91L10 2l2.938 5 6.062.91L14.5 12l1.378 6.09z" />
-                    </svg>
-                </div>
-                <p class="italic text-sm text-gray-200 mb-2">“MiRAjO.ai helped us scale conversations 4x without
-                    hiring. I didn’t know bots could feel this real.”</p>
-                <span class="text-yellow-300 font-semibold">– Malik J., CX Lead</span>
-            </div>
-
 
         </div>
         <!-- Embedded Footer -->
