Tweaked video fit on hero section — mobile now serving full-screen realness

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
         <!-- 🎥 Background Video fixed behind -->
         <video autoplay muted loop playsinline class="absolute inset-0 w-full h-full 
-           object-contain md:object-cover 
+           object-contain md:object-contain
            opacity-40 z-0">
             <source src="videos/vooi.mp4" type="video/mp4" />
             Your browser does not support the video tag.
