--- a/index.html
+++ b/index.html
@@ -152,51 +152,46 @@
     </header>
     <!-- ✅ NAVBAR END -->
 
-    <section class="relative w-full h-[80vh] overflow-hidden bg-black">
+<section class="relative w-full min-h-[60vh] md:h-[80vh] overflow-hidden bg-black">
 
-        <!-- 🎥 Background Video fixed behind -->
-        <video autoplay muted loop playsinline class="absolute inset-0 w-full h-full 
-           object-contain md:object-contain
-           opacity-40 z-0">
-            <source src="videos/vooi.mp4" type="video/mp4" />
-            Your browser does not support the video tag.
-        </video>
-        <!-- 🌌 Glow Effects -->
-        <div class="absolute inset-0 z-[1] pointer-events-none">
-            <div
-                class="absolute top-[-20%] left-[-20%] w-[50vw] h-[50vw] bg-[#1a767f] opacity-20 rounded-full blur-[120px]">
-            </div>
-            <div
-                class="absolute bottom-[-20%] right-[-20%] w-[50vw] h-[50vw] bg-[#ffcd30] opacity-20 rounded-full blur-[120px]">
-            </div>
-        </div>
+  <!-- 🎥 Background Video -->
+  <video autoplay muted loop playsinline
+    class="absolute inset-0 w-full h-full object-cover opacity-40 z-0">
+    <source src="videos/vooi.mp4" type="video/mp4" />
+    Your browser does not support the video tag.
+  </video>
 
-        <!-- ✨ Starfield -->
-        <canvas id="starfield" class="absolute inset-0 w-full h-full z-[2] pointer-events-none"></canvas>
+  <!-- 🌌 Glow Effects -->
+  <div class="absolute inset-0 z-[1] pointer-events-none">
+    <div class="absolute top-[-20%] left-[-20%] w-[50vw] h-[50vw] bg-[#1a767f] opacity-20 rounded-full blur-[120px]"></div>
+    <div class="absolute bottom-[-20%] right-[-20%] w-[50vw] h-[50vw] bg-[#ffcd30] opacity-20 rounded-full blur-[120px]"></div>
+  </div>
 
-        <!-- 💬 Content Over Video -->
-        <div class="relative z-10 h-full flex flex-col justify-center items-center text-white px-4 text-center"
-            data-aos="fade-up">
-            <h1 class="text-2xl md:text-4xl font-semibold text-white mb-6 leading-snug animate-breathe">
-                Never Miss a <br>
-                Customer Call Again
-            </h1>
+  <!-- ✨ Starfield -->
+  <canvas id="starfield" class="absolute inset-0 w-full h-full z-[2] pointer-events-none"></canvas>
 
-            <a href="tel:+17274859941">
-                <button
-                    class="group bg-[#ffcd30] text-black px-6 py-3 rounded-full font-medium flex items-center justify-center gap-2 hover:bg-[#e6b800] hover:scale-105 transition-transform duration-300">
-                    Call +1 (727) 485-9941
-                    <svg class="ml-1 w-4 h-4 transform rotate-[-45deg] transition-transform duration-300 group-hover:rotate-0 group-hover:translate-x-1"
-                        fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round"
-                        stroke-linejoin="round">
-                        <path d="M5 12h14M12 5l7 7-7 7" />
-                    </svg>
-                </button>
-            </a>
+  <!-- 💬 Content Over Video -->
+  <div class="relative z-10 flex flex-col justify-center items-center text-white px-4 text-center py-24 md:py-32"
+    data-aos="fade-up">
+    <h1 class="text-2xl md:text-4xl font-semibold text-white mb-6 leading-snug animate-breathe">
+      Never Miss a <br>
+      Customer Call Again
+    </h1>
 
-        </div>
+    <a href="tel:+17274859941">
+      <button
+        class="group bg-[#ffcd30] text-black px-6 py-3 rounded-full font-medium flex items-center justify-center gap-2 hover:bg-[#e6b800] hover:scale-105 transition-transform duration-300">
+        Call +1 (727) 485-9941
+        <svg class="ml-1 w-4 h-4 transform rotate-[-45deg] transition-transform duration-300 group-hover:rotate-0 group-hover:translate-x-1"
+          fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" stroke-linecap="round"
+          stroke-linejoin="round">
+          <path d="M5 12h14M12 5l7 7-7 7" />
+        </svg>
+      </button>
+    </a>
+  </div>
 
-    </section>
+</section>
 
     <div class="relative z-10 mt-8 md:mt-16">
 
