Update pricing page with latest changes

--- a/pricing.html
+++ b/pricing.html
@@ -161,9 +161,8 @@
 
     <!-- Smart Plan -->
     <!-- Smart Plan -->
-    <div
-      class="w-full bg-white rounded-3xl shadow-lg p-8 border-t-4 border-[var(--pastel-yellow)] transition hover:shadow-2xl">
-      <h3 class="flex items-center text-2xl font-bold text-[var(--brand-teal)] mb-2">
+  <div class="w-full sm:max-w-md mx-auto bg-white rounded-3xl shadow-lg p-8 border-t-4 border-[var(--pastel-yellow)] transition hover:shadow-2xl">
+  <h3 class="flex items-center text-2xl font-bold text-[var(--brand-teal)] mb-2">
         <svg class="w-5 h-5 text-[var(--pastel-yellow)] mr-2" viewBox="0 0 24 24" fill="currentColor">
           <path d="M12 2L19 12L12 22L5 12L12 2Z" />
         </svg>
@@ -220,9 +219,8 @@
     </div>
 
     <!-- Genius Plan -->
+   <div class="w-full sm:max-w-md mx-auto bg-white rounded-3xl shadow-lg p-8 border-t-4 border-[var(--pastel-yellow)] transition hover:shadow-2xl">
     <div
-      class="relative w-full bg-white rounded-3xl shadow-lg p-8 border-4 border-indigo-600 transition hover:shadow-2xl">
-      <div
         class="absolute -top-5 left-1/2 transform -translate-x-1/2 flex items-center gap-2 bg-white px-4 py-1 border border-indigo-600 rounded-full text-indigo-600 font-semibold text-sm shadow">
         <svg class="w-5 h-5 text-[var(--pastel-yellow)]" viewBox="0 0 24 24" fill="currentColor">
           <path d="M12 2L19 12L12 22L5 12L12 2Z" />
@@ -282,7 +280,7 @@
 
     <!-- Brilliant Plan -->
     <div
-      class="w-full bg-white rounded-3xl shadow-lg p-8 border-t-4 border-[var(--pastel-purple)] transition hover:shadow-2xl">
+      class="w-full sm:max-w-md mx-auto bg-white rounded-3xl shadow-lg p-8 border-t-4 border-[var(--pastel-yellow)] transition hover:shadow-2xl">
       <h3 class="flex items-center text-2xl font-bold text-[var(--brand-teal)] mb-2">
         <svg class="w-5 h-5 text-[var(--pastel-yellow)] mr-2" viewBox="0 0 24 24" fill="currentColor">
           <path d="M12 2L19 12L12 22L5 12L12 2Z" />
@@ -345,7 +343,7 @@
 
     <!-- Smart Annual -->
     <div
-      class="w-full bg-white rounded-3xl shadow-lg p-8 border-t-4 border-[var(--pastel-yellow)] transition hover:shadow-2xl">
+      class="w-full sm:max-w-md mx-auto bg-white rounded-3xl shadow-lg p-8 border-t-4 border-[var(--pastel-yellow)] transition hover:shadow-2xl">
       <h3 class="flex items-center text-2xl font-bold text-[var(--brand-teal)] mb-2">
         <svg class="w-5 h-5 text-[var(--pastel-yellow)] mr-2" viewBox="0 0 24 24" fill="currentColor">
           <path d="M12 2L19 12L12 22L5 12L12 2Z" />
@@ -428,7 +426,7 @@
 
     <!-- Genius Annual -->
     <div
-      class="relative w-full bg-white rounded-3xl shadow-lg p-8 border-4 border-indigo-600 transition hover:shadow-2xl">
+      class="w-full sm:max-w-md mx-auto bg-white rounded-3xl shadow-lg p-8 border-t-4 border-[var(--pastel-yellow)] transition hover:shadow-2xl">
       <div
         class="absolute -top-5 left-1/2 transform -translate-x-1/2 flex items-center gap-2 bg-white px-4 py-1 border border-indigo-600 rounded-full text-indigo-600 font-semibold text-sm shadow">
         <svg class="w-5 h-5 text-[var(--pastel-yellow)]" viewBox="0 0 24 24" fill="currentColor">
@@ -504,7 +502,7 @@
 
     <!-- Brilliant Annual -->
     <div
-      class="w-full bg-white rounded-3xl shadow-lg p-8 border-t-4 border-[var(--pastel-purple)] transition hover:shadow-2xl">
+      class="w-full sm:max-w-md mx-auto bg-white rounded-3xl shadow-lg p-8 border-t-4 border-[var(--pastel-yellow)] transition hover:shadow-2xl">
       <h3 class="flex items-center text-2xl font-bold text-[var(--brand-teal)] mb-2">
         <svg class="w-5 h-5 text-[var(--pastel-yellow)] mr-2" viewBox="0 0 24 24" fill="currentColor">
           <path d="M12 2L19 12L12 22L5 12L12 2Z" />
