--- a/pricing.html
+++ b/pricing.html
@@ -49,7 +49,7 @@
 
       <nav class="hidden md:flex space-x-8 text-gray-700 font-medium">
         <a href="index.html" class="hover:text-[var(--brand-teal)] transition">Home</a>
-        <a href="https://home.mirajoco.org/" class="hover:text-[var(--brand-teal)] transition">Collective</a>
+        <a href="https://home.mirajoco.org/" class="hover:text-[var(--brand-teal)] transition">MiRAjO Collective</a>
         <a href="https://login.mirajoagency.org/" class="hover:text-[var(--brand-teal)] transition">Client Login</a>
       </nav>
       <button id="menu-toggle" class="md:hidden text-gray-700 focus:outline-none">
@@ -61,7 +61,7 @@
     </div>
     <div id="mobile-menu" class="md:hidden hidden bg-white border-t border-gray-200">
       <a href="index.html" class="block px-6 py-3 font-medium hover:bg-gray-50">Home</a>
-      <a href="https://home.mirajoco.org/" class="block px-6 py-3 font-medium hover:bg-gray-50">Collective</a>
+      <a href="https://home.mirajoco.org/" class="block px-6 py-3 font-medium hover:bg-gray-50">MiRAjO Collective</a>
       <a href="https://login.mirajoagency.org/" class="block px-6 py-3 font-medium hover:bg-gray-50">Client Login</a>
     </div>
   </header>
