--- a/pricing.html
+++ b/pricing.html
@@ -331,7 +331,7 @@
           Full analytics dashboard
         </li>
       </ul>
-      <a href="https://link.fastpaydirect.com/payment-link/681b7d8b741ad1fcd7dc1e32"
+      <a href="https://link.fastpaydirect.com/payment-link/681b7d30741ad11d9bdc1e20"
         class="block bg-[var(--brand-teal)] text-white font-semibold text-center py-3 rounded-xl hover:opacity-90 transition">
         Let’s Talk
       </a>
@@ -577,7 +577,7 @@
           4 User Logins
         </li>
       </ul>
-      <a href="https://link.fastpaydirect.com/payment-link/681b7d59082a6f09a9ee4725"
+      <a href="https://link.fastpaydirect.com/payment-link/681b7d59082a6f09a9ee4725
         class="block bg-[var(--brand-teal)] text-white font-semibold text-center py-3 rounded-xl hover:opacity-90 transition">
         Let’s Talk
       </a>
