Update pricing page with latest changes

--- a/pricing.html
+++ b/pricing.html
@@ -585,9 +585,73 @@
         Let’s Talk
       </a>
     </div>
-
-
   </div>
+<!-- Add-Ons Section -->
+<section class="py-16 px-6 bg-white fade-up">
+  <div class="max-w-5xl mx-auto text-center mb-10">
+    <h2 class="text-3xl font-bold text-gray-800 mb-4">Customize Your Plan</h2>
+    <p class="text-gray-600 text-lg">Enhance your experience with optional add-ons designed for flexibility and scale.</p>
+  </div>
+
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-8 max-w-5xl mx-auto">
+    <!-- Additional Users -->
+    <div class="bg-gray-50 border border-gray-200 rounded-2xl p-6 shadow-sm hover:shadow-md transition">
+      <h3 class="text-xl font-semibold text-[var(--brand-teal)] mb-2">Additional Users</h3>
+      <p class="text-gray-700 mb-2 text-sm">Add extra users to your team and expand access across roles.</p>
+      <p class="text-gray-900 font-bold text-lg">$5<span class="text-sm font-medium text-gray-600"> /mo per user</span></p>
+    </div>
+
+    <!-- Additional Languages -->
+    <div class="bg-gray-50 border border-gray-200 rounded-2xl p-6 shadow-sm hover:shadow-md transition">
+      <h3 class="text-xl font-semibold text-[var(--brand-teal)] mb-2">Additional Languages</h3>
+      <p class="text-gray-700 mb-2 text-sm">Offer service in more languages. Support up to 7: English, Brazilian Portuguese, Spanish, French, German, Italian, and Dutch.</p>
+      <p class="text-gray-900 font-bold text-lg">$50<span class="text-sm font-medium text-gray-600"> /mo per language</span></p>
+    </div>
+
+    <!-- HIPAA Compliance -->
+    <div class="bg-gray-50 border border-gray-200 rounded-2xl p-6 shadow-sm hover:shadow-md transition">
+      <h3 class="text-xl font-semibold text-[var(--brand-teal)] mb-2">HIPAA Compliance</h3>
+      <p class="text-gray-700 mb-2 text-sm">Secure your data for healthcare and related industries. Applies per chatbot or voice agent.</p>
+      <p class="text-gray-900 font-bold text-lg">$450<span class="text-sm font-medium text-gray-600"> /mo per agent</span></p>
+    </div>
+  </div>
+</section>
+<!-- Plan Comparison Section -->
+<section class="py-16 bg-white fade-up px-6">
+  <div class="max-w-4xl mx-auto">
+    <h2 class="text-3xl font-bold text-center text-gray-800 mb-10">Plan Comparison</h2>
+    <div class="overflow-x-auto rounded-2xl border border-gray-200 shadow-md">
+      <table class="min-w-full text-sm text-left text-gray-800 table-auto">
+        <thead class="bg-gray-50 border-b border-gray-200">
+          <tr>
+            <th class="px-4 py-4 text-base font-semibold">Feature</th>
+            <th class="px-4 py-4 text-center text-[var(--brand-teal)] font-semibold">Smart</th>
+            <th class="px-4 py-4 text-center text-indigo-600 font-semibold">Genius</th>
+            <th class="px-4 py-4 text-center text-[var(--brand-teal)] font-semibold">Brilliant</th>
+          </tr>
+        </thead>
+        <tbody class="divide-y divide-gray-100">
+          <tr><td class="px-4 py-3">Monthly Price</td><td class="text-center">$297</td><td class="text-center">$497</td><td class="text-center">$997</td></tr>
+          <tr><td class="px-4 py-3">Annual Price (10% Off)</td><td class="text-center">$3,207</td><td class="text-center">$4,830</td><td class="text-center">$10,767</td></tr>
+          <tr><td class="px-4 py-3">Human-Trained Chatbots</td><td class="text-center">1</td><td class="text-center">2</td><td class="text-center">2</td></tr>
+          <tr><td class="px-4 py-3">AI Voice Agent</td><td class="text-center text-gray-400">—</td><td class="text-center text-gray-400">—</td><td class="text-center">✔</td></tr>
+          <tr><td class="px-4 py-3">CRM Access</td><td class="text-center">✔</td><td class="text-center">✔</td><td class="text-center">✔</td></tr>
+          <tr><td class="px-4 py-3">Multichannel Messaging</td><td class="text-center text-gray-400">—</td><td class="text-center">✔</td><td class="text-center">✔</td></tr>
+          <tr><td class="px-4 py-3">Calendar Booking Integration</td><td class="text-center">✔</td><td class="text-center">✔</td><td class="text-center">✔</td></tr>
+          <tr><td class="px-4 py-3">Round-Robin Calendar Routing</td><td class="text-center text-gray-400">—</td><td class="text-center text-gray-400">—</td><td class="text-center">✔</td></tr>
+          <tr><td class="px-4 py-3">Prompt Refinement</td><td class="text-center">Light</td><td class="text-center">Light</td><td class="text-center">Ongoing</td></tr>
+          <tr><td class="px-4 py-3">Workflow Strategy & Consulting</td><td class="text-center text-gray-400">—</td><td class="text-center text-gray-400">—</td><td class="text-center">✔</td></tr>
+          <tr><td class="px-4 py-3">Languages Included</td><td class="text-center">1</td><td class="text-center">1</td><td class="text-center">2</td></tr>
+          <tr><td class="px-4 py-3">Mobile App Access</td><td class="text-center">✔</td><td class="text-center">✔</td><td class="text-center">✔</td></tr>
+          <tr><td class="px-4 py-3">User Logins</td><td class="text-center">2</td><td class="text-center">3</td><td class="text-center">4</td></tr>
+          <tr><td class="px-4 py-3">GDPR Compliant</td><td class="text-center">✔</td><td class="text-center">✔</td><td class="text-center">✔</td></tr>
+          <tr><td class="px-4 py-3">HIPAA Ready (Add-On)</td><td class="text-center">✔</td><td class="text-center">✔</td><td class="text-center">✔</td></tr>
+          <tr><td class="px-4 py-3">Priority Support Line</td><td class="text-center text-gray-400">—</td><td class="text-center text-gray-400">—</td><td class="text-center">✔</td></tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</section>
 
   <script>
     // mobile menu
